--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,45 +15,64 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@5c7944e73c4c2a096b17a9cb74d65b6c2bbafbde # v2.9.1
+      - name: "Harden Runner"
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
           egress-policy: audit
 
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: "Checkout"
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
+      - name: "Setup Go"
+        uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
           go-version-file: test/go.mod
           cache: true
 
-      - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+      - name: "Setup Terraform"
+        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
+
+      - name: "Install JUnit Reporter"
+        working-directory: test
+        run: go install github.com/jstemmer/go-junit-report/v2@v2.1.0
+
+      - name: "Configure Core Apply Role"
+        uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722 # v4.1.0
         with:
           role-to-assume: ${{ vars.CORE_APPLY_ROLE }}
           aws-region: us-east-1
 
-      - run: |
+      - name: "Configure Core Apply Role Profile"
+        run: |
           aws configure set aws_access_key_id ${{ env.AWS_ACCESS_KEY_ID }} --profile core-profile
           aws configure set aws_secret_access_key ${{ env.AWS_SECRET_ACCESS_KEY }} --profile core-profile
           aws configure set aws_session_token ${{ env.AWS_SESSION_TOKEN }} --profile core-profile
 
-      - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+      - name: "Configure Sandbox Apply Role"
+        uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722 # v4.1.0
         with:
           role-to-assume: ${{ vars.SANDBOX_APPLY_ROLE }}
           aws-region: us-east-1
 
-      - shell: bash
+      - name: "Run Tests"
         working-directory: test
+        shell: bash
         env:
           TF_VAR_route53_profile: core-profile
           TF_VAR_route53_zone_id: ${{ secrets.CORE_HOSTED_ZONE_ID }}
           TF_VAR_route53_zone_name: ${{ secrets.CORE_HOSTED_ZONE_NAME }}
         run: |
-          go install github.com/jstemmer/go-junit-report@latest
-          go test -timeout 20m -v ./... | tee report.txt
-          go-junit-report -set-exit-code < report.txt > report.xml
+          set -o pipefail
+          go test -race -v ./... 2>&1 | tee results.out
 
-      - uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86 # v2.4
+      - name: "Convert Test Results"
+        working-directory: test
+        shell: bash
+        if: hashFiles('test/results.out') != ''
+        run: go-junit-report -set-exit-code < results.out > results.xml
+
+      - name: "Upload Test Results"
+        uses: test-summary/action@31493c76ec9e7aa675f1585d3ed6f1da69269a86 # v2.4
+        if: hashFiles('test/results.xml') != ''
         with:
-          paths: test/report.xml
-        if: always()
+          paths: test/results.xml
