--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,11 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 2c9f875913ee60ca25ce70243dc24d5b6415598c # frozen: v4.6.0
-    hooks:
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-executables-have-shebangs
-      - id: check-json
-      - id: check-toml
-      - id: check-yaml
-      - id: detect-aws-credentials
-      - id: detect-private-key
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
-
   - repo: https://github.com/gitleaks/gitleaks
-    rev: 77c3c6a34b2577d71083442326c60b8fd58926ec # frozen: v8.18.4
+    rev: ee6b38352380ce52369d16b7873093c4b8bf829b # frozen: v8.24.3
     hooks:
       - id: gitleaks
 
   - repo: https://github.com/gruntwork-io/pre-commit
-    rev: d0bcdb35c6999a4a120b528f050d2b11778fd3d0 # frozen: v0.1.23
+    rev: 59fd8610ae21aaf8234f1ef17d43c3ccdee84d16 # frozen: v0.1.29
     hooks:
       - id: terraform-fmt
       - id: terraform-validate
@@ -27,32 +13,14 @@ repos:
       - id: shellcheck
 
   - repo: https://github.com/mxab/pre-commit-trivy.git
-    rev: 8bf32a5e81aa824af2cb56762c6fdee59f52c534 # frozen: v0.12.0
+    rev: a804ee07a4c0c0793d3698a8936dea8d79116614 # frozen: v0.15.0
     hooks:
       - id: trivyfs-docker
         args: ["."]
       - id: trivyconfig-docker
         args: ["."]
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: f12edd9c7be1c20cfa42420fd0e6df71e42b51ea # frozen: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        exclude_types:
-          - markdown
-
-  - repo: https://github.com/executablebooks/mdformat
-    rev: 08fba30538869a440b5059de90af03e3502e35fb # frozen: 0.7.17
-    hooks:
-      - id: mdformat
-
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: f295829140d25717bc79368d3f966fc1f67a824f # frozen: v0.41.0
-    hooks:
-      - id: markdownlint-fix-docker
-
   #  - repo: https://github.com/terraform-docs/terraform-docs
-  #    rev: 2a6efef6469c3ebb961a3e1388639573d886bfbb # frozen: v0.18.0
+  #    rev: v0.16.0
   #    hooks:
   #      - id: terraform-docs-system
   #        args:
@@ -66,8 +34,37 @@ repos:
   #            ".",
   #          ]
 
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "f12edd9c7be1c20cfa42420fd0e6df71e42b51ea" # frozen: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        exclude_types:
+          - markdown
+      - id: prettier
+        name: prettier markdown
+        types:
+          - markdown
+        args: ["--prose-wrap", "always"]
+
   - repo: https://github.com/golangci/golangci-lint
-    rev: c2e095c022a97360f7fff5d49fbc11f273be929a # frozen: v1.60.3
+    rev: 00a561d9a79578a2800dece2f04c60ad479a3798 # frozen: v2.1.2
     hooks:
       - id: golangci-lint-full
         entry: bash -c 'cd test && golangci-lint run --fix'
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: 586c3ea3f51230da42bab657c6a32e9e66c364f0 # frozen: v0.44.0
+    hooks:
+      - id: markdownlint-fix-docker
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: cef0300fd0fc4d2a87a85fa2093c6b283ea36f4b # frozen: v5.0.0
+    hooks:
+      - id: check-json
+      - id: check-toml
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
