--- a/examples/simple/infracost-usage.yml
+++ b/examples/simple/infracost-usage.yml
@@ -3,5 +3,11 @@
 # `infracost breakdown --usage-file infracost-usage.yml [other flags]`
 # See https://infracost.io/usage-file/ for docs
 version: 0.1
-# resource_type_default_usage: {}
-# resource_usage: {}
+resource_usage:
+  module.this.module.lambda.aws_cloudwatch_log_group.this[0]:
+    storage_gb: 0.0 # Total data stored by CloudWatch logs in GB.
+    monthly_data_ingested_gb: 0.0 # Monthly data ingested by CloudWatch logs in GB.
+    monthly_data_scanned_gb: 0.0 # Monthly data scanned by CloudWatch logs insights in GB.
+  module.this.module.lambda.aws_lambda_function.this:
+    monthly_requests: 2628000 # Monthly requests to the Lambda function.
+    request_duration_ms: 100 # Average duration of each request in milliseconds.
