--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd #v3.1.2
 
+      - name: "Setup node"
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+
       - name: "Install JUnit Reporter"
         working-directory: test
         run: go install github.com/jstemmer/go-junit-report/v2@v2.1.0
@@ -63,6 +66,7 @@ jobs:
           TF_VAR_route53_zone_name: ${{ secrets.CORE_HOSTED_ZONE_NAME }}
         run: |
           set -o pipefail
+          npm --version
           go test -race -v ./... 2>&1 | tee results.out
 
       - name: "Convert Test Results"
