--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       - name: "Setup node"
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
-          node-version: '22.x' # Match this with your Lambda runtime version
+          node-version: "22.x" # Match this with your Lambda runtime version
       - name: "Install JUnit Reporter"
         working-directory: test
         run: go install github.com/jstemmer/go-junit-report/v2@v2.1.0
